--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/oorestisime/gatsby-source-instagram/issues"
   },
   "dependencies": {
-    "axios": "^0.20.0"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@babel/cli": "7.11.6",
@@ -32,8 +32,8 @@
   ],
   "license": "MIT",
   "peerDependencies": {
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby": ">=3.0.0"
+    "gatsby": ">=3.0.0",
+    "gatsby-source-filesystem": "^3.1.0"
   },
   "repository": "https://github.com/oorestisime/gatsby-source-instagram",
   "scripts": {
