--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gatsby-source-instagram",
+  "name": "@bondvet/gatsby-source-instagram",
   "description": "Gatsby source plugin for fetching instagram posts",
   "version": "0.9.0",
   "author": "Orestis Ioannou <oorestisime@gmail.com>",
