--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@bondvet/gatsby-source-instagram",
-  "description": "Gatsby source plugin for fetching instagram posts",
-  "version": "1.2.1",
-  "author": "Orestis Ioannou <oorestisime@gmail.com>",
+  "name": "gatsby-source-instagram-json",
+  "description": "Gatsby source plugin for fetching instagram posts from local JSON file",
+  "version": "0.0.1",
+  "author": "Gabriele Ardizzone <gabri.ardi@gmail.com>",
   "main": "index.js",
   "bugs": {
-    "url": "https://github.com/oorestisime/gatsby-source-instagram/issues"
-  },
-  "dependencies": {
-    "axios": "^0.21.1"
+    "url": "https://github.com/gabriardi/gatsby-source-instagram-json/issues"
   },
   "devDependencies": {
     "@babel/cli": "7.11.6",
@@ -25,7 +22,7 @@
     "eslint-plugin-react": "7.20.6",
     "prettier": "2.1.2"
   },
-  "homepage": "https://github.com/oorestisime/gatsby-source-instagram",
+  "homepage": "https://github.com/gabriardi/gatsby-source-instagram-json",
   "keywords": [
     "gatsby",
     "gatsby-plugin"
@@ -35,7 +32,7 @@
     "gatsby": ">=3.0.0",
     "gatsby-source-filesystem": "^3.1.0"
   },
-  "repository": "https://github.com/oorestisime/gatsby-source-instagram",
+  "repository": "https://github.com/gabriardi/gatsby-source-instagram-json",
   "scripts": {
     "build": "babel src --out-dir . --ignore **/__tests__",
     "prepare": "cross-env NODE_ENV=production npm run build",
